# sync-server-llm

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  run_server.py
.github/workflows/: pre-commit.yml
configs/: config.toml  example.toml
llm_backend/: __init__.py  search.py  summarize.py  utils.py
llm_backend/rag/: __init__.py  config.py  content_formatters.py  service.py  workflow.py
llm_backend/search/: __init__.py  config.py  service.py
llm_backend/summarize/: __init__.py  config.py  service.py
scripts/: client.py  gen_protos.py  serve.py
