[tool.poetry]
name = "llm-backend"
version = "0.1.0"
description = ""
authors = ["David Chiu <david20571015@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
serve = "scripts.serve:main"
gen-protos = "scripts.gen_protos:generate"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
llama-index = "^0.10.26"
llama-index-vector-stores-chroma = "^0.1.6"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-llms-openai = "^0.1.14"
chromadb = "^0.5.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
ruff = "^0.4.7"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
